dev/bases/rclone/server/deployment_volume_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rclone
spec:
  template:
    spec:
      volumes:
        - name: data
          emptyDir: # override base
          persistentVolumeClaim:
            claimName: veidemann-validwarcs
